# oclpy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: backend-gaps.md
src/oclpy/: __init__.py  _array.py  _backend.py  _dtypes.py  _ops.py
tests/: conftest.py  test_creation.py  test_elementwise.py  test_manipulation.py  test_pyclesperanto_smoke.py
